--- a/css/style.css
+++ b/css/style.css
@@ -9893,5 +9893,68 @@ h3 {
     border-color: #dee2e6;
   }
 }
+body {
+  font-size: 3rem;
+}
+
+h1 {
+  font-size: 7vmin;
+  color: #a11fd5;
+}
+
+h2 {
+  font-size: 6vmin;
+}
+
+.navbar {
+  font-size: 4.5vmin;
+}
+
+.navbar-toggler {
+  font-size: 3rem;
+}
+
+footer .navbar-nav {
+  flex-direction: row;
+}
+
+footer .navbar {
+  font-size: 3.5vmin;
+}
+
+main {
+  margin-bottom: 20vmin;
+}
+main p {
+  font-size: 4.5vmin;
+}
+main .btn {
+  font-size: 5vmin;
+}
+main .btn-md {
+  font-size: 4vmin;
+}
+
+thead {
+  font-size: 4vmin;
+  font-weight: normal;
+}
+
+tbody {
+  font-size: 4vmin;
+  color: #2e2e2e;
+}
+tbody h2 {
+  font-size: 4.2vmin;
+}
+
+em {
+  font-size: 2.8vmin;
+  color: #444444;
+}
+
+.btn-success {
+  background-color: #a11fd5;
+}
 
 /*# sourceMappingURL=style.css.map */
