--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,3 @@
-@import "../node_modules/bootstrap/scss/bootstrap.scss"
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "./utils/variables";
+@import "./base/typographie";
